--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "antidot-fw/aura-router-adapter": "dev-master",
     "antidot-fw/cli": "dev-master",
     "antidot-fw/dev-tools": "dev-master",
+    "antidot-fw/doctrine": "dev-master",
     "antidot-fw/event-dispatcher": "^1.1.0",
     "antidot-fw/framework": "dev-master",
     "antidot-fw/logger": "^1.0.1",
