--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "antidot-fw/event-dispatcher": "^1.1.0",
     "antidot-fw/framework": "dev-master",
     "antidot-fw/logger": "^1.0.1",
+    "antidot-fw/phug-template-renderer": "dev-master",
     "antidot-fw/symfony-config-translator": "dev-master",
     "symfony/yaml": "^4.2.7",
     "wshafer/psr11-monolog": "@dev",
