--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,10 @@
     "antidot-fw/framework": "dev-master",
     "antidot-fw/logger": "^1.0.1",
     "antidot-fw/phug-template-renderer": "dev-master",
+    "antidot-fw/session": "dev-master",
     "antidot-fw/symfony-config-translator": "dev-master",
     "symfony/yaml": "^4.2.7",
+    "webmozart/assert": "^1.4",
     "wshafer/psr11-monolog": "@dev",
     "zendframework/zend-config": "^3.2"
   },
