--- a/config/services/dependencies.prod.yaml
+++ b/config/services/dependencies.prod.yaml
@@ -3,6 +3,8 @@ services:
   App\Application\Http\Handler\HomePage:
   App\Application\Http\Handler\AddTodo:
   App\Application\Http\Handler\RemoveTodo:
+  App\Application\Http\Handler\EditTodo:
+  App\Application\Http\Middleware\ValidateTodoRequest:
   App\Domain\TodosRepository:
     factory: [Antidot\Persistence\Doctrine\Container\EntityRepositoryFactory, 'App\Domain\Model\Todo']
   Antidot\Render\TemplateRenderer:
